err/clique-blockchain.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Clique_blockchain-0.2.3.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/clique'...
Listing './lib/python3.5/site-packages/clique/app'...
Listing './lib/python3.5/site-packages/cookiecutter'...
Listing './lib/python3.5/site-packages/cookiecutter/hooks'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/docs'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/docs/_static'...
Compiling './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/docs/conf.py'...
***   File "./lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/docs/conf.py", line 34
    from {{ cookiecutter.py_module }}.__about__ import (
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/licenses'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/locale'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/locale/en_US'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/locale/en_US/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/requirements'...
Compiling './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/setup.py'...
***   File "./lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/setup.py", line 15
    {%- if cookiecutter.license == "MIT" %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/tests'...
Compiling './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/tests/test_{{cookiecutter.py_module}}.py'...
***   File "./lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/tests/test_{{cookiecutter.py_module}}.py", line 2
    import {{ cookiecutter.py_module }}
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/{{cookiecutter.py_module}}'...
Compiling './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/{{cookiecutter.py_module}}/__main__.py'...
***   File "./lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/{{cookiecutter.py_module}}/__main__.py", line 2
    {%- if cookiecutter.pyapp_type == "asyncio" -%}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/deprecation-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jwcrypto'...
Listing './lib/python3.5/site-packages/jwcrypto-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/nicfit'...
Listing './lib/python3.5/site-packages/nicfit/console'...
Listing './lib/python3.5/site-packages/nicfit.py-0.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/jwcrypto'...
Listing './share/python-wheels'...
